--- a/app/src/main/res/layout/fragment_bulk_roles.xml
+++ b/app/src/main/res/layout/fragment_bulk_roles.xml
@@ -3,16 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.SettingsFragment">
+    tools:context=".fragments.setting_fragments.BulkRolesFragment">
 
-    <fragment
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"
-        app:navGraph="@navigation/settings_navigation_graph"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        />
-
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
