--- a/app/src/main/res/layout/layout_role_info.xml
+++ b/app/src/main/res/layout/layout_role_info.xml
@@ -55,6 +55,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:scrollbars="none"
+            android:layoutAnimation="@anim/layout_animation"
             android:visibility="visible"
             android:paddingBottom="@dimen/dp_8"
             tools:itemCount="2"
@@ -93,6 +94,7 @@
             android:id="@+id/rv_roles_ignore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layoutAnimation="@anim/layout_animation"
             android:orientation="horizontal"
             android:scrollbars="none"
             android:visibility="gone"
