--- a/app/src/main/res/layout/recycler_view_item_role_chip.xml
+++ b/app/src/main/res/layout/recycler_view_item_role_chip.xml
@@ -4,20 +4,26 @@
     android:id="@+id/role_chip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/add_button_transparent"
+    android:background="@drawable/chip_background"
     android:backgroundTint="@color/active_color"
     android:orientation="vertical"
     android:layout_margin="@dimen/dp_4"
     android:padding="@dimen/dp_8">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="TEST"
-        android:textColor="@color/active_color"
-        android:textAllCaps="false"
-        android:textSize="@dimen/text_tiny"
-        android:id="@+id/role_chip_name"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="TEST"
+            android:textColor="@color/white_stroke"
+            android:textAllCaps="false"
+            android:textSize="@dimen/text_tiny"
+            android:id="@+id/role_chip_name"/>
 
 
+    </LinearLayout>
 </LinearLayout>
