--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,5 @@
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_48">48dp</dimen>
     <dimen name="dp_56">56dp</dimen>
+    <dimen name="dp_20">20dp</dimen>
 </resources>
