Add Role Selection Fragment
First Init

--- a/app/src/main/res/layout/layout_command_prefix.xml
+++ b/app/src/main/res/layout/layout_command_prefix.xml
@@ -40,7 +40,7 @@
             android:id="@+id/prefix_input_layer"
             style="@style/inputLayer"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_48"
+            android:layout_height="wrap_content"
             app:counterEnabled="true"
             app:counterMaxLength="5">
 
