--- a/app/src/main/res/layout/layout_autodelete.xml
+++ b/app/src/main/res/layout/layout_autodelete.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:focusableInTouchMode="true"
+    android:clickable="true"
+    android:focusable="true"
     android:elevation="@dimen/padding_8"
     app:cardBackgroundColor="@color/surface_dark_grey"
     app:cardCornerRadius="@dimen/dp_16"
