--- a/app/src/main/res/layout/layout_command_prefix.xml
+++ b/app/src/main/res/layout/layout_command_prefix.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/dp_8"
+    android:focusableInTouchMode="true"
+    android:clickable="true"
+    android:focusable="true"
     app:cardBackgroundColor="@color/surface_dark_grey"
     app:cardCornerRadius="@dimen/dp_16"
     app:strokeWidth="0dp">
@@ -82,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/rolemenu_create_name_nodm"
                 android:textSize="@dimen/text_very_small"
+                android:id="@+id/example_command"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/check_red"
                 android:layout_weight="1"
