--- a/app/src/main/res/layout/recycler_view_selected_role_chip.xml
+++ b/app/src/main/res/layout/recycler_view_selected_role_chip.xml
@@ -9,10 +9,10 @@
     android:backgroundTint="@color/active_color"
     android:orientation="vertical"
     android:layout_margin="@dimen/dp_2"
-    android:paddingTop="@dimen/dp_2"
-    android:paddingBottom="@dimen/dp_2"
-    android:paddingStart="@dimen/dp_4"
-    android:paddingEnd="@dimen/dp_4"
+    android:paddingTop="@dimen/dp_4"
+    android:paddingBottom="@dimen/dp_4"
+    android:paddingStart="@dimen/dp_8"
+    android:paddingEnd="@dimen/dp_8"
 
     >
 
@@ -27,11 +27,11 @@
             tools:text="TEST"
             android:textColor="@color/white_stroke"
             android:textAllCaps="false"
-            android:textSize="@dimen/text_very_tiny"
+            android:textSize="@dimen/text_very_small"
             android:id="@+id/role_chip_name"/>
 
         <ImageView
-            android:layout_width="10dp"
+            android:layout_width="12dp"
             android:layout_marginStart="@dimen/dp_4"
             android:layout_height="fill_parent"
             app:tint="@color/white_stroke"
