--- a/app/src/main/res/layout/fragment_role_selection.xml
+++ b/app/src/main/res/layout/fragment_role_selection.xml
@@ -13,9 +13,10 @@
         android:id="@+id/bottom_sheet"
         style="@style/myBottomModalSheet"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_height="match_parent">
+        android:focusableInTouchMode="false">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -46,47 +47,16 @@
                 app:layout_constraintTop_toBottomOf="@id/drag_handle" />
 
             <ImageView
+                android:id="@+id/clear_selection"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:scaleY="1.5"
                 android:scaleX="1.5"
-                android:id="@+id/clear_selection"
+                android:scaleY="1.5"
+                android:src="@drawable/ic_clear_all"
+                app:layout_constraintBottom_toBottomOf="@id/title_label"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
                 app:layout_constraintTop_toTopOf="@id/title_label"
-                app:layout_constraintBottom_toBottomOf="@id/title_label"
-                app:tint="@color/white_stroke"
-                android:src="@drawable/ic_clear_all"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/rv_selected_roles_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp_16"
-                app:layout_constraintBottom_toTopOf="@id/role_search_input_layout"
-                app:layout_constraintEnd_toStartOf="@id/vg96"
-                app:layout_constraintHeight_max="128dp"
-                app:layout_constraintStart_toEndOf="@id/vg04"
-                app:layout_constraintTop_toBottomOf="@id/title_label">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_selected_roles"
-                        android:layout_width="match_parent"
-                        android:nestedScrollingEnabled="false"
-                        android:layout_height="wrap_content"
-                        android:layoutAnimation="@anim/layout_animation"
-                        android:orientation="horizontal"
-                        android:scrollbars="none"
-                        android:visibility="gone"
-                        tools:listitem="@layout/recycler_view_selected_role_chip" />
-
-                </RelativeLayout>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:tint="@color/white_stroke" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -99,7 +69,7 @@
                 app:endIconTint="@color/white_stroke"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
                 app:layout_constraintStart_toEndOf="@id/vg04"
-                app:layout_constraintTop_toBottomOf="@id/rv_selected_roles_layout">
+                app:layout_constraintTop_toBottomOf="@id/title_label">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/role_search_edit_text"
@@ -110,109 +80,137 @@
                     android:inputType="text"
                     android:maxLines="1"
                     android:textColor="@color/active_color"
-                    android:textSize="@dimen/text_medium" />
+                    android:textSize="@dimen/text_medium"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LinearLayout
-                android:id="@+id/nothing_found_layout"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone"
+                android:layout_marginTop="@dimen/dp_16"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
                 app:layout_constraintStart_toEndOf="@id/vg04"
                 app:layout_constraintTop_toBottomOf="@id/role_search_input_layout">
 
-                <com.airbnb.lottie.LottieAnimationView
-                    android:layout_width="256dp"
-                    android:layout_height="256dp"
-                    android:layout_gravity="center"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true">
 
-                    android:layout_marginTop="@dimen/dp_16"
-                    android:layout_marginBottom="@dimen/dp_16"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
-                    app:lottie_rawRes="@raw/empty_state" />
-
-                <TextView
-                    style="@style/myFontStyle.Headline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/dp_16"
-                    android:layout_marginBottom="@dimen/dp_64"
-                    android:text="@string/nothing_found_search"
-                    android:textAlignment="center"
-                    android:textColor="@color/white_stroke"
-                    android:textSize="@dimen/text_huge"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rv_selected_roles"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layoutAnimation="@anim/layout_animation"
+                            android:nestedScrollingEnabled="false"
+                            android:visibility="visible"
+                            tools:listitem="@layout/recycler_view_selected_role_chip" />
 
 
-            <LinearLayout
-                android:id="@+id/no_role_left_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone"
-                app:layout_constraintEnd_toStartOf="@id/vg96"
-                app:layout_constraintStart_toEndOf="@id/vg04"
-                app:layout_constraintTop_toBottomOf="@id/role_search_input_layout">
+                        <LinearLayout
+                            android:id="@+id/other_layouts"
+                            android:layout_below="@id/rv_selected_roles"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
-                <com.airbnb.lottie.LottieAnimationView
-                    android:layout_width="256dp"
-                    android:layout_height="256dp"
-                    android:layout_gravity="center"
+                            <LinearLayout
+                                android:id="@+id/nothing_found_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:visibility="gone">
 
-                    android:layout_marginTop="@dimen/dp_16"
-                    android:layout_marginBottom="@dimen/dp_16"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
-                    app:lottie_rawRes="@raw/empty_ghost" />
+                                <com.airbnb.lottie.LottieAnimationView
+                                    android:layout_width="256dp"
+                                    android:layout_height="256dp"
+                                    android:layout_gravity="center"
 
-                <TextView
-                    style="@style/myFontStyle.Headline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/dp_16"
-                    android:layout_marginBottom="@dimen/dp_64"
-                    android:text="Booo!\n\nNo role left"
-                    android:textAlignment="center"
-                    android:textColor="@color/white_stroke"
-                    android:textSize="@dimen/text_huge"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                                    android:layout_marginTop="@dimen/dp_16"
+                                    android:layout_marginBottom="@dimen/dp_16"
+                                    app:lottie_autoPlay="true"
+                                    app:lottie_loop="true"
+                                    app:lottie_rawRes="@raw/empty_state" />
 
-            <RelativeLayout
-                android:id="@+id/rv_layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constrainedHeight="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/vg96"
-                app:layout_constraintStart_toEndOf="@id/vg04"
-                app:layout_constraintTop_toBottomOf="@id/role_search_input_layout">
+                                <TextView
+                                    style="@style/myFontStyle.Headline"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="@dimen/dp_16"
+                                    android:layout_marginBottom="@dimen/dp_64"
+                                    android:text="@string/nothing_found_search"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/white_stroke"
+                                    android:textSize="@dimen/text_huge"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_available_roles"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="@dimen/dp_16"
-                    android:fadingEdgeLength="@dimen/dp_8"
-                    android:focusable="true"
-                    android:clickable="true"
-                    android:focusableInTouchMode="true"
-                    android:layoutAnimation="@anim/layout_animation"
-                    android:nestedScrollingEnabled="true"
-                    android:paddingBottom="@dimen/dp_32"
-                    android:requiresFadingEdge="vertical"
-                    android:scrollbars="none"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                    tools:itemCount="5"
-                    tools:listitem="@layout/recycler_view_select_role" />
-            </RelativeLayout>
+
+                            <LinearLayout
+                                android:id="@+id/no_role_left_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical"
+                                android:visibility="gone">
+
+                                <com.airbnb.lottie.LottieAnimationView
+                                    android:layout_width="256dp"
+                                    android:layout_height="256dp"
+                                    android:layout_gravity="center"
+
+                                    android:layout_marginTop="@dimen/dp_16"
+                                    android:layout_marginBottom="@dimen/dp_16"
+                                    app:lottie_autoPlay="true"
+                                    app:lottie_loop="true"
+                                    app:lottie_rawRes="@raw/empty_ghost" />
+
+                                <TextView
+                                    style="@style/myFontStyle.Headline"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginTop="@dimen/dp_16"
+                                    android:layout_marginBottom="@dimen/dp_64"
+                                    android:text="Booo!\n\nNo role left"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/white_stroke"
+                                    android:textSize="@dimen/text_huge"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/rv_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                app:layout_constrainedHeight="true">
+
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/rv_available_roles"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginTop="@dimen/dp_16"
+                                    android:clickable="true"
+                                    android:fadingEdgeLength="@dimen/dp_8"
+                                    android:focusable="true"
+                                    android:focusableInTouchMode="true"
+                                    android:layoutAnimation="@anim/layout_animation"
+                                    android:nestedScrollingEnabled="true"
+                                    android:paddingBottom="@dimen/dp_32"
+                                    android:requiresFadingEdge="vertical"
+                                    android:scrollbars="none"
+                                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                                    tools:itemCount="5"
+                                    tools:listitem="@layout/recycler_view_select_role" />
+                            </RelativeLayout>
+
+                        </LinearLayout>
+                    </RelativeLayout>
+
+
+            </androidx.core.widget.NestedScrollView>
 
 
             <androidx.constraintlayout.widget.Guideline
