--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="discord_default_alpha">#807289DA</color>
     <color name="card_background">#A6323237</color>
     <color name="check_red">#C20A23</color>
+    <color name="red_flat">#ff5252</color>
     <color name="check_yellow">#E5A733</color>
     <color name="check_green">#33E5A7</color>
     <color name="active_color">#e53371</color>
