--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,6 +81,8 @@
         <item name="endIconTint">@color/white</item>
         <item name="boxStrokeColor">@color/text_input_stroke_color</item>
         <item name="errorIconDrawable">@null</item>
+        <item name="errorTextColor">@color/check_red</item>
+        <item name="boxStrokeErrorColor">@color/text_input_error_stroke_color</item>
     </style>
 
     <style name="mySwitch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
